improved unit test for trainee service

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8282
 # DB connection settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/finaldemotest
+spring.datasource.url=jdbc:postgresql://localhost:5432/finaldemo
 spring.datasource.username=postgres
 spring.datasource.password=baraka
 spring.datasource.driver-class-name=org.postgresql.Driver
